--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -6,9 +6,50 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-	<title>JSF 2.0 Hello World</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"></link>
+    <link rel="stylesheet" href="assets/css/main.css"></link>
+<link href='https://fonts.googleapis.com/css?family=Jura:400,300' rel='stylesheet' type='text/css'></link>
+    <title>Bootstrap 101 Template</title>
+    
+
+    
 </h:head>
 <h:body bgcolor="white">
-	<h3>JSF 2.0 Hello World Example - welcome.xhtml</h3>
+	<div class="container">
+	<div class="row">
+	<div class="col-md-12">
+	<div id="registrieren">
+			<h1>Benutzer Registrieren</h1>
+	<h:form>
+	<h:outputLabel>Bitte geben Sie ihre <strong>E-Mail</strong> ein:</h:outputLabel>
+	<h:inputText id="email_input" binding="#{input1}" />
+	<h:outputLabel>Bitte geben Sie ihren Namen ein:</h:outputLabel>
+	<h:inputText id="benutzername_input" binding="#{input2}"  />
+	<h:outputLabel>Bitte geben Sie ihr Passwort ein:</h:outputLabel>
+	<h:inputSecret id="password_input" binding="#{input3}"  />
+	
+<h:commandButton value="registrieren" action="#{BenutzerController.registrieren(input1.value,input2.value,input3.value)}">
+ </h:commandButton>
+ 
+  <h:commandButton class="checkBtn" value="DB Überprüfen"> <f:ajax listener="#{SQLDatabase.statusAenderung}" render="outputMessage" />
+ </h:commandButton>
+<h:outputLabel class="statusMessage" id="outputMessage" value="#{SQLDatabase.SQLnotification}" infoClass="infoMessage"></h:outputLabel>
+
+</h:form>
+
+
+
+
+</div>
+	</div>
+	</div>
+	</div>
+	<div id="registrieren">
+
+</div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 </h:body>
 </html>
