--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -4,17 +4,20 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
 
-	<head>
+	<h:head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"></link>
     <link rel="stylesheet" href="assets/css/main.css"></link>
 	<link href='https://fonts.googleapis.com/css?family=Jura:400,300' rel='stylesheet' type='text/css'></link>
     <title>movieStar</title>
-	</head>
-	<h:body bgcolor="white">
+	</h:head>
+	<div id="preloader">
+    <div id="status"><h:graphicImage value="assets/img/preloader.gif" /></div>
+    <h1 id="load"><strong>movie</strong>Database</h1></div>
+	<h:body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -22,14 +25,25 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">movieStar</a>
+          <h:link class="navbar-brand" outcome="index">movie<strong>Database</strong></h:link>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+          <li><h:link outcome="login">Login<span id="login-nav" class="glyphicon glyphicon-log-in"></span></h:link></li>
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">Über uns</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
+          	<div class="col-sm-3 col-md-3 pull-right">
+		<h:form class="navbar-form" role="search">
+		<div class="input-group">
+			<h:inputText type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"></h:inputText>
+			<div class="input-group-btn">
+				<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+			</div>
+		</div>
+		</h:form>
+		</div>
         </div><!--/.nav-collapse -->
       </div>
     </nav>  
@@ -45,23 +59,28 @@
 		<h:outputLabel>Bitte geben Sie ihr Passwort ein:</h:outputLabel>
 		<h:inputSecret id="password_input" binding="#{input3}"  />
 	
-		<h:commandButton value="Einloggen" action="#{BenutzerController.logIn(input1.value,input3.value)}">
+		<h:commandButton class="loginBtn" value="Einloggen" action="#{BenutzerController.logIn(input1.value,input3.value)}">
  		</h:commandButton>
- 
-  		<h:commandButton class="checkBtn" value="DB Überprüfen"> <f:ajax listener="#{SQLDatabase.statusAenderung}" render="outputMessage" />
- 		</h:commandButton>
+
  		
-		<h:outputLabel class="statusMessage" id="outputMessage" value="#{SQLDatabase.SQLnotification}" infoClass="infoMessage"></h:outputLabel>
+		<h:outputLabel class="login-registrierungNotiz">Solltest du noch nich registriert sein bitte <h:link><strong>klicken</strong></h:link></h:outputLabel>
 
 	</h:form>
 					</div>
 			</div>
 		</div>
 	</div>
-	<div id="registrieren">
 
-</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    //<![CDATA[
+        $(window).load(function() { // makes sure the whole site is loaded
+            $('#status').fadeOut(); // will first fade out the loading animation
+            $('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website.
+            $('body').delay(350).css({'overflow':'visible'});
+        })
+    //]]>
+</script>
 </h:body>
 </html>
