--- a/src/main/webapp/benutzerVerwalten.xhtml
+++ b/src/main/webapp/benutzerVerwalten.xhtml
@@ -40,15 +40,19 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div id="registrieren">
-					<h1>Benutzer Einloggen</h1>
+					<h1>Benutzerdaten ändern</h1>
 	<h:form>
-		<h:messages id="messages" infoStyle="color:green" />
-		<h:outputLabel>Bitte geben Sie ihre E-Mail Adresse oder ihren Benuternamen ein:</h:outputLabel>
-		<h:inputText id="log_In_input" binding="#{input1}" />
-		<h:outputLabel>Bitte geben Sie ihr Passwort ein:</h:outputLabel>
-		<h:inputSecret id="password_input" binding="#{input3}"  />
+
+	<h:outputLabel>Bitte geben Sie ihre neue E-Mail Adresse ein:</h:outputLabel>
+	<h:inputText id="email_input" binding="#{input1}">
+		<f:validator validatorId="EmailValidation"></f:validator>
+	</h:inputText>
+	<h:outputLabel>Bitte geben Sie ihren neuen Benutzernamen ein:</h:outputLabel>
+	<h:inputText id="benutzername_input" binding="#{input2}"  />
+	<h:outputLabel>Bitte geben Sie ihr neues Passwort ein:</h:outputLabel>
+	<h:inputSecret id="password_input" binding="#{input3}"  />
 	
-		<h:commandButton value="Einloggen" action="#{BenutzerController.logIn(input1.value,input3.value)}">
+		<h:commandButton value="Speichern" action="#{BenutzerController.logIn(input1.value,input3.value)}">
  		</h:commandButton>
  
   		<h:commandButton class="checkBtn" value="DB Überprüfen"> <f:ajax listener="#{SQLDatabase.statusAenderung}" render="outputMessage" />
