--- a/src/main/webapp/mainPage.xhtml
+++ b/src/main/webapp/mainPage.xhtml
@@ -32,6 +32,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">Über uns</a></li>
+            <li><a href="#profil">Dein Profil</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -45,8 +46,8 @@
 
     </div><!-- /.container -->
     
-    <h:outputLink value = "registieren.xhtml">Registieren</h:outputLink><br/>
 	<h:outputLink value = "login.xhtml">Login</h:outputLink><br/>
+	<h:outputLink value = "benutzerVerwalten.xhtml">Dein Profil</h:outputLink><br/>
     
 
 
