--- a/src/main/webapp/registrieren.xhtml
+++ b/src/main/webapp/registrieren.xhtml
@@ -18,6 +18,28 @@
     
 </h:head>
 <h:body bgcolor="white">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">movieStar</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">Über uns</a></li>
+            <li><a href="#profil">Dein Profil</a></li>
+            <li><a href="#contact">Kontakt</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>  
+
 	<div class="container">
 	<div class="row">
 	<div class="col-md-12">
@@ -35,7 +57,7 @@
 	<h:outputLabel>Bitte geben Sie ihr Passwort ein:</h:outputLabel>
 	<h:inputSecret id="password_input" binding="#{input3}"  />
 	
-<h:commandButton value="registrieren" action="#{BenutzerController.registrieren(input1.value,input2.value,input3.value)}" update=":benutzer, :message" >
+<h:commandButton value="Registrieren" action="#{BenutzerController.registrieren(input1.value,input2.value,input3.value)}" update=":benutzer, :message" >
  </h:commandButton>
  
   <h:commandButton class="checkBtn" value="DB Überprüfen"> <f:ajax listener="#{SQLDatabase.statusAenderung}" render="outputMessage" />
