aufgeräumt: index.html + regAusgabe gelöscht

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -55,7 +55,7 @@
 				<div id="registrieren">
 					<h1>Benutzer Einloggen</h1>
 	<h:form>
-		<h:messages id="messages" infoStyle="color:green,margin:8px" />
+		<h:messages id="messages" infoStyle="color:green" />
 		<h:outputLabel>Bitte geben Sie ihre E-Mail Adresse oder ihren Benuternamen ein:</h:outputLabel>
 		<h:inputText id="log_In_input" binding="#{input1}" />
 		<h:outputLabel>Bitte geben Sie ihr Passwort ein:</h:outputLabel>
@@ -65,7 +65,7 @@
  		</h:commandButton>
 
  		
-		<h:outputLabel class="login-registrierungNotiz">Solltest du noch nich registriert sein bitte <h:link outcome="registrieren"><strong>klicken</strong></h:link></h:outputLabel>
+		<h:outputLabel class="login-registrierungNotiz">Solltest du noch nicht registriert sein bitte <h:link outcome="registrieren"><strong>klicken</strong></h:link></h:outputLabel>
 
 
 	</h:form>
