Navigation Film und Profil

--- a/src/main/webapp/filmformular.xhtml
+++ b/src/main/webapp/filmformular.xhtml
@@ -41,6 +41,8 @@
 							class="glyphicon glyphicon-log-in"></span>
 					</h:link></li>
 				<li class="active"><a href="#">Home</a></li>
+				<li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film"></span></h:link></li>
+				<li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-profil"></span></h:link></li>
 				<li><a href="#about">Über uns</a></li>
 				<li><a href="#contact">Kontakt</a></li>
 			</ul>
