--- a/src/main/webapp/benutzerVerwalten.xhtml
+++ b/src/main/webapp/benutzerVerwalten.xhtml
@@ -28,8 +28,9 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
+             <li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film"></span></h:link></li>
+             <li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-profil"></span></h:link></li>
             <li><a href="#about">Über uns</a></li>
-            <li><a href="#profil">Dein Profil</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
         </div><!--/.nav-collapse -->
