--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,6 +31,8 @@
           <ul class="nav navbar-nav">
           <li><h:link outcome="login">Login<span id="login-nav" class="glyphicon glyphicon-log-in"></span></h:link></li>
             <li class="active"><a href="#">Home</a></li>
+            <li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film"></span></h:link></li>
+            <li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-profil"></span></h:link></li>
             <li><a href="#about">Über uns</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
@@ -61,7 +63,7 @@
     		<div class="col-lg-4">
     		
     			<div class="row"><div class="col-md-12 bordertest"><h1 class="h1padding">Film der Woche</h1><p class="textpadding">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.  
-</p></div></div>
+			</p></div></div>
     			<div class="row"><div class="col-md-12 bordertest"><h1 class="h1padding">Top 10</h1><p class="textpadding">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 </p></div></div>
     		</div>
