--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -32,6 +32,8 @@
           <ul class="nav navbar-nav">
           <li><h:link outcome="login">Login<span id="login-nav" class="glyphicon glyphicon-log-in"></span></h:link></li>
             <li class="active"><a href="#">Home</a></li>
+            <li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film"></span></h:link></li>
+            <li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-profil"></span></h:link></li>
             <li><a href="#about">Über uns</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
