--- a/src/main/webapp/benutzerVerwalten.xhtml
+++ b/src/main/webapp/benutzerVerwalten.xhtml
@@ -33,8 +33,8 @@
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">	
 				<li><h:link outcome="index">Home<span id="index-nav" class="glyphicon glyphicon-index"></span></h:link></li>
-          <li><h:link outcome="login">Login<span id="login-nav" class="glyphicon glyphicon-log-in"></span></h:link></li>
-            <li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film"></span></h:link></li>
+          <li><h:link outcome="login">Login<span id="login-nav" class="glyphicon glyphicon-log-in glyphicon-nav-pos"></span></h:link></li>
+            <li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:link></li>
             <li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-profil"></span></h:link></li>
 				<li><a href="#about">Über uns</a></li>
 				<li><a href="#contact">Kontakt</a></li>
