--- a/src/main/webapp/filmformular.xhtml
+++ b/src/main/webapp/filmformular.xhtml
@@ -62,57 +62,50 @@
 	</div>
 	</nav>
 
-
+	<h:form>
 	<div class="container-fluid firstContainer container-btrap-clear ">
 		<div class="row">
 			<div class="col-lg-8 textpadding pd-l-50">
 				<h1>
 					Film <strong>erstellen</strong>
 				</h1>
+				
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">name:</div>
 					<div class="col-xs-10 inputpd-80-768">
-						<h:form>
-							<h:inputText id="filmname" class=""></h:inputText>
-						</h:form>
+						<h:inputText id="filmname" class="" value="#{film.name}"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">genre:</div>
 					<div class="col-xs-10 inputpd-80-768">
-						<h:form>
+					<!-- 
 							<h:selectOneMenu class="inputmarginbottom-15"
 								value="#{user.favCoffee1}">
 								<f:selectItem itemValue="Cream Latte" itemLabel="Drama" />
 								<f:selectItem itemValue="Extreme Mocha" itemLabel="Komödie" />
 								<f:selectItem itemValue="Buena Vista" itemLabel="Horror" />
-							</h:selectOneMenu>
-						</h:form>
+							</h:selectOneMenu>  -->
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">dauer:</div>
 					<div class="col-xs-10 inputpd-80-768">
-						<h:form>
-							<h:inputText class=""></h:inputText>
-						</h:form>
+							<h:inputText class="" value="#{film.dauer}"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">mitwirkende:</div>
 					<div class="col-xs-10 inputpd-80-768">
-						<h:form>
 							<h:inputText class=""></h:inputText>
-						</h:form>
 					</div>
 				</div>
 								<div class="row">
 					<div class="col-sm-2 txt-pd-l-20">beschreibung:</div>
 					<div class="col-sm-10">
-						<h:form>
-							<h:inputTextarea class="beschreibunginput"></h:inputTextarea>
-						</h:form>
+							<h:inputTextarea class="beschreibunginput" value="#{film.beschreibung}" ></h:inputTextarea>
 					</div>
+					
 				</div>
 
 			</div>
@@ -123,9 +116,9 @@
 				<h:button id="uploadFotoButton" value="Upload Film Foto"></h:button>
 			</div>
 		</div>
-		<div class="row"><div class="col-md-12  pd-l-50"><h:button class="" value="Film speichern"></h:button></div></div>
+		<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="" value="Film speichern" action="#{filmController.filmErstellen(film)}" ></h:commandButton></div></div>
 	</div>
-
+	</h:form>
 
 
 	<script
