--- a/src/main/webapp/registrieren.xhtml
+++ b/src/main/webapp/registrieren.xhtml
@@ -8,13 +8,14 @@
 	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 
 <h:head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet"></link>
-    <link rel="stylesheet" href="assets/css/main.css"></link>
-<link href='https://fonts.googleapis.com/css?family=Jura:400,300' rel='stylesheet' type='text/css'></link>
-    <title>movieDatabase</title>
-  
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta>
+	<meta name="viewport" content="width=device-width, initial-scale=1"></meta>
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet"></link>
+	<link rel="stylesheet" href="assets/css/main.css"></link>
+	<link href='https://fonts.googleapis.com/css?family=Jura:400,300'
+		rel='stylesheet' type='text/css'></link>
+	<title>movieDatabase</title>
+
 </h:head>
 
 <div id="preloader">
@@ -26,39 +27,53 @@
 	</h1>
 </div>
 <h:body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <h:link class="navbar-brand" outcome="index">movie<strong>Database</strong></h:link>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-          <li><h:link outcome="index">Home<span id="index-nav" class="glyphicon glyphicon-index"></span></h:link></li>
-          <li><h:link outcome="login">Login<span id="login-nav" class="glyphicon glyphicon-log-in glyphicon-nav-pos"></span></h:link></li>
-            <li><h:link outcome="filmformular">Film erstellen<span id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span></h:link></li>
-            <li><h:link outcome="benutzerVerwalten">Profil verwalten<span id="profil-nav" class="glyphicon glyphicon-profil"></span></h:link></li>
-            <li><a href="#about">Über uns</a></li>
-            <li><a href="#contact">Kontakt</a></li>
-          </ul>
-          	<div class="col-sm-3 col-md-3 pull-right">
-		<h:form class="navbar-form" role="search">
-		<div class="input-group">
-			<h:inputText type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"></h:inputText>
-			<div class="input-group-btn">
-				<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed"
+				data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+				aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span> <span
+					class="icon-bar"></span> <span class="icon-bar"></span> <span
+					class="icon-bar"></span>
+			</button>
+			<h:link class="navbar-brand" outcome="index">movie<strong>Database</strong>
+			</h:link>
+		</div>
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li><h:link outcome="index">Home<span id="index-nav"
+							class="glyphicon glyphicon-index"></span>
+					</h:link></li>
+				<li><h:link outcome="login">Login<span id="login-nav"
+							class="glyphicon glyphicon-log-in glyphicon-nav-pos"></span>
+					</h:link></li>
+				<li><h:link outcome="filmformular">Film erstellen<span
+							id="film-nav" class="glyphicon glyphicon-film glyphicon-nav-pos"></span>
+					</h:link></li>
+				<li><h:link outcome="benutzerVerwalten">Profil verwalten<span
+							id="profil-nav" class="glyphicon glyphicon-profil"></span>
+					</h:link></li>
+				<li><a href="#about">Über uns</a></li>
+				<li><a href="#contact">Kontakt</a></li>
+			</ul>
+			<div class="col-sm-3 col-md-3 pull-right">
+				<h:form class="navbar-form" role="search">
+					<div class="input-group">
+						<h:inputText type="text" class="form-control" placeholder="Search"
+							name="srch-term" id="srch-term"></h:inputText>
+						<div class="input-group-btn">
+							<button class="btn btn-default" type="submit">
+								<i class="glyphicon glyphicon-search"></i>
+							</button>
+						</div>
+					</div>
+				</h:form>
 			</div>
 		</div>
-		</h:form>
-		</div>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>  
+		<!--/.nav-collapse -->
+	</div>
+	</nav>
 
 	<div class="container">
 		<div class="row">
@@ -69,20 +84,36 @@
 
 						<h:outputLabel>Bitte geben Sie ihre <strong>E-Mail</strong> ein:</h:outputLabel>
 						<h:inputText id="email_input" binding="#{input1}" size="40"
-							a:placeholder="E-Mail Adresse" value="#{BenutzerController.emailAdresse}">
+							a:placeholder="E-Mail Adresse"
+							value="#{BenutzerController.emailAdresse}">
 							<f:validator validatorId="EmailValidation"></f:validator>
-							<f:ajax event="valueChange" execute="email_input" render="outputEmailCheck"></f:ajax>
+							<f:ajax event="valueChange" execute="email_input"
+								render="outputEmailCheck registerButton"></f:ajax>
 						</h:inputText>
-						<h:outputText id="outputEmailCheck" value="#{BenutzerController.emailVorhanden}" style="color:red; margin:5px; display:block" />
+						<h:panelGroup id="outputEmailCheck">
+							<h:outputText id="outputEmailCheckZwei"
+								value="E-Mail schon vorhanden."
+								rendered="#{BenutzerController.emailInDBVorhanden}"
+								style="color:red; margin:5px; display:block" />
+						</h:panelGroup>
+
 						<h:message for="email_input" style="color:red" />
-						
+
 						<h:outputLabel>Bitte geben Sie ihren Namen ein:</h:outputLabel>
 						<h:inputText id="benutzername_input" binding="#{input2}" size="40"
-							a:placeholder="Benutzername" value="#{BenutzerController.nutzername}">
-							<f:ajax event="valueChange" execute="benutzername_input" render="outputNutzernameCheck"></f:ajax>
+							a:placeholder="Benutzername"
+							value="#{BenutzerController.nutzername}">
+							<f:ajax event="valueChange" execute="benutzername_input"
+								render="outputNutzernameCheck registerButton"></f:ajax>
 						</h:inputText>
-							<h:outputText id="outputNutzernameCheck" value="#{BenutzerController.nutzernameVorhanden}" style="color:red; margin:5px; display:block"/>
-							
+						<h:panelGroup id="outputNutzernameCheck">
+							<h:outputText id="outputNutzernameCheckZwei"
+								value="Benutzername schon vorhanden."
+								rendered="#{BenutzerController.nutzernameInDBVorhanden}"
+								style="color:red; margin:5px; display:block" />
+						</h:panelGroup>
+
+
 						<h:outputLabel>Bitte geben Sie ihr Passwort ein:</h:outputLabel>
 						<h:inputSecret
 							title="mind. 1 Zahl, mind. 1 Großbuchstaben, mind. 1 Kleinbuchstaben, 
@@ -93,16 +124,15 @@
 						</h:inputSecret>
 						<h:message for="password_input" style="color:red" />
 
+						<h:panelGroup id="registerButton">
+							<h:commandButton value="registrieren"
+								action="#{BenutzerController.registrieren(input1.value,input2.value,input3.value)}"
+								update=":benutzer, :message"
+								rendered="#{!BenutzerController.nutzernameVorhanden and !BenutzerController.emailVorhanden}">
+							</h:commandButton>
+						</h:panelGroup>
 
-						<h:commandButton value="registrieren"
-							action="#{BenutzerController.registrieren(input1.value,input2.value,input3.value)}"
-							update=":benutzer, :message">
-						</h:commandButton>
 
-						<h:commandButton class="checkBtn" value="DB Überprüfen">
-							<f:ajax listener="#{SQLDatabase.statusAenderung}"
-								render="outputMessage" />
-						</h:commandButton>
 						<h:outputLabel class="statusMessage" id="outputMessage"
 							value="#{SQLDatabase.SQLnotification}" infoClass="infoMessage"></h:outputLabel>
 
