--- a/src/main/webapp/registrieren.xhtml
+++ b/src/main/webapp/registrieren.xhtml
@@ -69,7 +69,7 @@
 
 
 						<h:outputLabel class="statusMessage" id="outputMessage"
-							value="#{SQLDatabase.SQLnotification}" infoClass="infoMessage"></h:outputLabel>
+							value="#{benutzerDAO.SQLnotification}" infoClass="infoMessage"></h:outputLabel>
 
 					</h:form>
 
