--- a/src/main/webapp/filmListe.xhtml
+++ b/src/main/webapp/filmListe.xhtml
@@ -10,39 +10,45 @@
 	<ui:define name="content">
 		<div class="container-fluid firstContainer container-btrap-clear ">
 
-			<h:dataTable value="#{filmController.filme}" var="f"
-				styleClass="order-table" headerClass="order-table-header"
-				rowClasses="order-table-odd-row,order-table-even-row">
+			<h:form>
+				<h:dataTable value="#{filmController.filme}" var="f"
+					styleClass="order-table" headerClass="order-table-header"
+					rowClasses="order-table-odd-row,order-table-even-row">
 
-				<h:column>
-					<!-- column header -->
-					<f:facet name="header">Name</f:facet>
-					<!-- row record -->
-    				#{f.name}
-    			</h:column>
+					<h:column>
+						<!-- column header -->
+						<f:facet name="header">Name</f:facet>
+						<!-- row record -->
+						<h:commandLink action="#{filmController.selectFilm(f.name)}"
+							value="#{f.name}" />
 
-				<h:column>
-					<f:facet name="header">Beschreibung</f:facet>
+					</h:column>
+
+					<h:column>
+						<f:facet name="header">Beschreibung</f:facet>
     				#{f.beschreibung}
     			</h:column>
 
-			</h:dataTable>
+				</h:dataTable>
+
+			</h:form>
+
 		</div>
-		
+
 		<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-	<script type="text/javascript">
-		//<![CDATA[
-		$(window).load(function() { // makes sure the whole site is loaded
-			$('#status').fadeOut(); // will first fade out the loading animation
-			$('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website.
-			$('body').delay(350).css({
-				'overflow' : 'visible'
-			});
-		})
-		//]]>
-	</script>
+			src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src="assets/js/bootstrap.min.js"></script>
+		<script type="text/javascript">
+			//<![CDATA[
+			$(window).load(function() { // makes sure the whole site is loaded
+				$('#status').fadeOut(); // will first fade out the loading animation
+				$('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website.
+				$('body').delay(350).css({
+					'overflow' : 'visible'
+				});
+			})
+			//]]>
+		</script>
 
 	</ui:define>
 
