--- a/src/main/webapp/filmformular.xhtml
+++ b/src/main/webapp/filmformular.xhtml
@@ -7,6 +7,10 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html">
 <ui:composition template = "/templates/commom-template.xhtml">
+<f:metadata>
+	<f:event listener="#{filmController.filmVorbereiten}" type="preRenderView" />
+</f:metadata>
+
 <ui:define name="content">
 	<h:form>
 	<div class="container-fluid firstContainer container-btrap-clear ">
@@ -19,14 +23,14 @@
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">#{msg['filmName']}</div>
 					<div class="col-xs-10 inputpd-80-768">
-						<h:inputText id="filmname" class="" value="#{film.name}"></h:inputText>
+						<h:inputText id="filmname" class="" value="#{filmController.film.name}"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">#{msg['filmGenre']}</div>
 					<div class="col-xs-10 inputpd-80-768">
 							<h:selectOneMenu class="inputmarginbottom-15"
-								value="#{film.genre}">
+								value="#{filmController.film.genre}">
 								<f:selectItems value="#{filmController.genreValues}" />
 							</h:selectOneMenu>  
 					</div>
@@ -34,7 +38,7 @@
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">#{msg['filmDauer']}</div>
 					<div class="col-xs-10 inputpd-80-768">
-							<h:inputText class="" value="#{film.dauer}"></h:inputText>
+							<h:inputText class="" value="#{filmController.film.dauer}"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
@@ -46,7 +50,7 @@
 					<div class="row">
 						<div class="col-sm-2 txt-pd-l-20">#{msg['filmBeschreibung']}</div>
 						<div class="col-sm-10">
-							<h:inputTextarea class="beschreibunginput" value="#{film.beschreibung}" ></h:inputTextarea>
+							<h:inputTextarea class="beschreibunginput" value="#{filmController.film.beschreibung}" ></h:inputTextarea>
 						</div>
 					
 					</div>
@@ -59,7 +63,7 @@
 					<h:button id="uploadFotoButton" value="#{msg['filmFotoUpload']}"></h:button>
 				</div>
 		</div>
-			<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="" value="#{msg['filmSpeichern']}" action="#{filmController.filmErstellen(film)}" ></h:commandButton></div></div>
+			<div class="row"><div class="col-md-12  pd-l-50"><h:commandButton class="" value="#{msg['filmSpeichern']}" action="#{filmController.filmErstellen(filmController.film)}" ></h:commandButton></div></div>
 	</div>
 	</h:form>
 
