--- a/src/main/webapp/registrieren.xhtml
+++ b/src/main/webapp/registrieren.xhtml
@@ -16,7 +16,7 @@
 				<div id="registrieren">
 					<h1>Benutzer Registrieren</h1>
 					<h:form id="myform" action="#">
-
+						<h:messages id="messages" infoStyle="color:green" />
 						<h:outputLabel>Bitte geben Sie ihre <strong>E-Mail</strong> ein:</h:outputLabel>
 						<h:inputText id="email_input" binding="#{input1}" size="40"
 							a:placeholder="E-Mail Adresse"
@@ -54,7 +54,7 @@
 							title="mind. 1 Zahl, mind. 1 Großbuchstaben, mind. 1 Kleinbuchstaben, 
 							mind. 1 Sonderzeichen (@#$%), 6 - 20 Zeichen lang"
 							id="password_input" binding="#{input3}" size="40"
-							a:placeholder="Password">
+							a:placeholder="Passwort">
 							<f:validator validatorId="PasswordValidation"></f:validator>
 						</h:inputSecret>
 						<h:message for="password_input" style="color:red" />
