--- a/src/main/webapp/film.xhtml
+++ b/src/main/webapp/film.xhtml
@@ -5,7 +5,8 @@
 <html 	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:my="http://java.sun.com/jsf/composite/components">
 <ui:composition template = "/templates/commom-template.xhtml">
 
 <ui:define name="content">
@@ -41,7 +42,7 @@
 				<div class="row">
 					<div class="col-xs-2 txt-pd-l-20">#{msg['filmMitwirkende']}</div>
 					<div class="col-xs-10 inputpd-80-768">
-							<h:inputText class=""></h:inputText>
+							 <my:dynamicFieldList value="#{filmController.felder}" />
 					</div>
 				</div>
 					<div class="row">
