--- a/src/main/webapp/alleFilme.xhtml
+++ b/src/main/webapp/alleFilme.xhtml
@@ -21,7 +21,7 @@
 		<h:dataTable value="#{filmController.filme}" var="fi" style="border-collapse: collapse" border="0" cellpadding="10px">
 		<h:column>
 		<f:facet name="header">Name</f:facet>
-		#{fi.name}
+		<h:commandLink action="#{filmController.selectFilm(fi.name)}" value="#{fi.name}" />
 		</h:column>
 			<h:column>
 		<f:facet name="header">Erscheinungsjahr</f:facet>
