--- a/src/main/webapp/alleFilme.xhtml
+++ b/src/main/webapp/alleFilme.xhtml
@@ -20,7 +20,7 @@
 		<h:dataTable value="#{filmController.filme}" var="fi" style="border-collapse: collapse" border="0" cellpadding="10">
 		<h:column>
 		<f:facet name="header">Name</f:facet>
-						<h:commandLink action="#{filmController.selectFilm(fi.name)}"
+						<h:commandLink action="#{filmController.selectFilm(fi.name, 'FILM')}"
 							value="#{fi.name}" />
 		</h:column>
 			<h:column>
