--- a/src/main/webapp/filmformular.xhtml
+++ b/src/main/webapp/filmformular.xhtml
@@ -22,35 +22,41 @@
 				</h1>
 				
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmName']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmName']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 						<h:inputText id="filmname" class="" value="#{filmController.film.name}"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmGenre']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmGenre']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 							<h:selectOneMenu class="inputmarginbottom-15"
 								value="#{filmController.film.genre}">
 								<f:selectItems value="#{filmController.genreValues}" />
 							</h:selectOneMenu>  
 					</div>
 				</div>
+								<div class="row">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmErscheinungsjahr']}</div>
+					<div class="col-xs-9 inputpd-80-768">
+							<h:inputText class="" value="#{filmController.film.erscheinungsjahr}"></h:inputText>
+					</div>
+				</div>
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmDauer']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmDauer']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 							<h:inputText class="" value="#{filmController.film.dauer}"></h:inputText>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-2 txt-pd-l-20">#{msg['filmMitwirkende']}</div>
-					<div class="col-xs-10 inputpd-80-768">
+					<div class="col-xs-3 txt-pd-l-20">#{msg['filmMitwirkende']}</div>
+					<div class="col-xs-9 inputpd-80-768">
 							 <my:dynamicFieldList value="#{filmController.felder}" />
 					</div>
 				</div>
 					<div class="row">
-						<div class="col-sm-2 txt-pd-l-20">#{msg['filmBeschreibung']}</div>
-						<div class="col-sm-10">
+						<div class="col-sm-3 txt-pd-l-20">#{msg['filmBeschreibung']}</div>
+						<div class="col-sm-9">
 							<h:inputTextarea class="beschreibunginput" value="#{filmController.film.beschreibung}" ></h:inputTextarea>
 						</div>
 					
