--- a/src/main/webapp/film.xhtml
+++ b/src/main/webapp/film.xhtml
@@ -27,7 +27,7 @@
 				<p>Amber Tamblyn, Arielle Kebbel, Jennifer Beals, Edison Chen, Sarah Michelle Gellar</p>
 				<div class="starsContainer">
 				<p class="pd-t-30 font-40">#{msg['filmSterne']}</p>
-				<p class="pd-l-30 font-100">#{filmController.film.sterne}</p>
+				<p class="font-100">#{filmController.film.sterne}</p>
 				</div>
 			</div>
 		</div>
