--- a/src/main/webapp/alleFilme.xhtml
+++ b/src/main/webapp/alleFilme.xhtml
@@ -14,7 +14,7 @@
 	<div class="container-fluid firstContainer container-btrap-clear ">
 		<div class="row">
 			<div class="col-lg-12 textpadding pd-l-50 pd-t-30">
-				<h1 class="font-50">Django Unchained</h1>
+				<h1 class="font-40">Filme</h1>
 				
 		
 		<h:dataTable value="#{filmController.filme}" var="fi" style="border-collapse: collapse" border="0" cellpadding="10">
