--- a/src/main/webapp/filmListe.xhtml
+++ b/src/main/webapp/filmListe.xhtml
@@ -19,7 +19,7 @@
 						<!-- column header -->
 						<f:facet name="header">Name</f:facet>
 						<!-- row record -->
-						<h:commandLink action="#{filmController.selectFilm(f.name)}"
+						<h:commandLink action="#{filmController.selectFilm(f.name, 'FILMUPDATE')}"
 							value="#{f.name}" />
 
 					</h:column>
